discussion/platform.ui/192465/192465_rev2_discussion.txt
======================================================================================================================
DESCRIPTION:

Use Thread.yield() instead of yield()

As per https://openjdk.java.net/jeps/361 yield is restricted identifier
and this breaks javadoc build with Java 17 with:
"
../../../eclipse.platform.ui/bundles/org.eclipse.ui.workbench/Eclipse
UI/org/eclipse/ui/application/WorkbenchAdvisor.java:759: error: invalid
use of a restricted identifier 'yield'
					yield();
					^
  (to invoke a method called yield, qualify the yield with a receiver or
type name)
  "

Signed-off-by: Alexander Kurtakov <akurtako@redhat.com>

Change-Id: Ib769d0e744c786871dffb94bd297f96c2c9ddb8e
Reviewed-on: https://git.eclipse.org/r/c/platform/eclipse.platform.ui/+/192465
Tested-by: Alexander Kurtakov <akurtako@redhat.com>
Reviewed-by: Alexander Kurtakov <akurtako@redhat.com>

======================================================================================================================
COMMENTS
======================================================================================================================
Author: Alexander Kurtakov
Date: 2022-04-04 11:01:33.000000000
Message: 
Change has been successfully rebased and submitted as 1e03b2c133c9f300155550c0633ea185b411b765
----------------------------------------------------------------------------------------------------------------------
